gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22881.d
version https://git-lfs.github.com/spec/v1
oid sha256:9c3a1f9822dc90eecdff1c2f4a5840dc95c4bc5c8712f985015bb31221ce86a6
size 2046
